# HRI-Campus

./: .windsurfrules  README.md  audio_recorder.py  run_audio_recorder.sh
audio_common/audio_capture/: CMakeLists.txt  package.xml
audio_common/audio_capture/launch/: audio_capture_filter.launch.py  comica_mic_capture.launch.py  my_capture.launch.xml
audio_common/audio_capture/src/: audio_capture_filter_node.cpp
audio_common/sound_play/: CMakeLists.txt
audio_common/sound_play/scripts/: soundplay_node.py
audio_play_python/: README.md  package.xml  setup.cfg  setup.py
audio_play_python/audio_play_python/: audio_play_node.py
audio_play_python/launch/: audio_play.launch.py
dummy_level_publisher/: package.xml  setup.cfg  setup.py
dummy_level_publisher/dummy_level_publisher/: dummy_level_publisher_node.py
fisheye_process/: CMakeLists.txt  package.xml
fisheye_process/src/: stitch.cpp
human_detect/: package.xml  setup.cfg  setup.py
human_detect/human_detect/: detect.py  detect_qrcode.py
level_interfaces/: CMakeLists.txt  package.xml
level_interfaces/msg/: Level.msg
llm_bytedance/: README.md  package.xml  setup.cfg  setup.py
llm_bytedance/launch/: llm_bytedance.launch.py
llm_bytedance/llm_bytedance/: llm_bytedance_node.py
robot_voice_launcher/: README.md  README_active_questioning.md  package.xml  setup.cfg  setup.py
robot_voice_launcher/launch/: active_questioning.launch.py  active_voice_baidu.launch.py  active_voice_stepfun.launch.py  camera_system.launch.py  debug_voice_interaction.launch.py  integrated_interaction.launch.py  integrated_system_baidu.launch.py  integrated_system_stepfun.launch.py  mic_mute.launch.py  voice_system.launch.py  voice_system_baidu.launch.py  voice_system_stepfun.launch.py
robot_voice_launcher/robot_voice_launcher/: active_questioning_node.py  interaction_coordinator_node.py  mic_mute_node.py  service_trigger_node.py
servo/: package.xml  setup.py
servo/servo/: servo copy.py  servo.py
speech_generation_baidu/: README.md  package.xml  setup.cfg  setup.py
speech_generation_baidu/launch/: speech_generation_baidu.launch.py
speech_generation_baidu/speech_generation_baidu/: speech_generation_baidu_node.py
speech_generation_stepfun/: README.md  package.xml  setup.cfg  setup.py
speech_generation_stepfun/launch/: speech_generation_stepfun.launch.py
speech_generation_stepfun/speech_generation_stepfun/: speech_generation_stepfun_node.py
speech_recognition/: README.md  package.xml  requirements.txt  setup.py
speech_recognition/launch/: speech_recognition.launch.py
speech_recognition/speech_recognition/: speech_recognition_node.py
speech_recognition_baidu/: README.md  package.xml  setup.py
speech_recognition_baidu/launch/: speech_recognition_baidu.launch.py
speech_recognition_baidu/scripts/: speech_recognition_baidu_node
speech_recognition_baidu/speech_recognition_baidu/: speech_recognition_baidu_node.py
speech_recognition_stepfun/: README.md  package.xml  setup.cfg  setup.py
speech_recognition_stepfun/launch/: speech_recognition_stepfun.launch.py
speech_recognition_stepfun/speech_recognition_stepfun/: speech_recognition_stepfun_node.py
usb_cam/launch/: camera.launch.py  camera_config.py
