<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_play_python</name>
  <version>0.0.0</version>
  <description>ROS2节点，用于将音频数据播放到系统扬声器</description>
  <maintainer email="jerryzhang7@126.com">jay</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>audio_common_msgs</depend>
  <depend>speech_generation_baidu</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
