<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_voice_launcher</name>
  <version>0.1.0</version>
  <description>统一启动包，用于顺序启动语音交互相关的所有节点</description>
  <maintainer email="jerryzhang7@126.com">jay</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>audio_capture</depend>
  <depend>speech_recognition_baidu</depend>
  <depend>llm_bytedance</depend>
  <depend>speech_generation_baidu</depend>
  <depend>audio_play_python</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
